--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,23 @@
-streamlit
-pandas
-numpy
-matplotlib
-
+more-itertools==8.1.0
+numpy==1.18.1
+pandas==0.25.3
+psutil==5.6.7
+pyparsing==2.4.6
+pyrsistent==0.15.7
+python-dateutil==2.8.1
+pytz==2019.3
+PyYAML==5.3
+regexp==0.1
+scikit-learn==0.22.1
+scipy==1.4.1
+six==1.14.0
+sklearn==0.0
+sklearn-pandas==1.8.0
+SQLAlchemy==1.3.13
+tzlocal==2.0.0
+Werkzeug==0.16.1
+wincertstore==0.2
+xgboost==0.90
+numpy>=1.21.0
+pandas>=1.3.0
+streamlit>=1.10.0
