--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,6 @@
-more-itertools==8.1.0
 numpy==1.18.1
 pandas==0.25.3
-psutil==5.6.7
-pyparsing==2.4.6
-pyrsistent==0.15.7
-python-dateutil==2.8.1
-pytz==2019.3
-PyYAML==5.3
-regexp==0.1
-scikit-learn==0.22.1
+scikit-learn
 scipy==1.4.1
 six==1.14.0
 sklearn==0.0
