--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,10 @@
-scikit-learn=0.24.2
+scikit-learn<=0.24.2
 streamlit
 folium
 pandas
 geopy
 requests
 SQLAlchemy==1.3.13
-xgboost==0.90
 numpy>=1.21.0
 pandas>=1.3.0
 streamlit>=1.10.0
