--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-scikit-learn<=0.24.2
+scikit-learn
 streamlit
 folium
 geopy
 requests
-SQLAlchemy==1.3.13
-numpy>=1.21.0
-streamlit>=1.10.0
+SQLAlchemy
+numpy
+streamlit
