--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,9 @@
-streamlit==1.34.0
-pandas==2.2.0
-folium==0.15.0
+streamlit
+pandas
+folium
 geopy==2.4.1
 requests==2.31.0
 matplotlib==3.8.2
 kneed==0.8.5
-numpy==1.26.3
+numpy<1.24.0  # Use an older NumPy version compatible with scikit-learn 0.24.2
 scikit-learn==0.24.2
-pygments==2.19.1
-markdown-it-py==3.0.0
-mdurl==0.1.2
-rich==13.9.4
