--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+setuptools>=59.6.0
+wheel>=0.37.0
 streamlit
 pandas
 folium
@@ -5,5 +7,5 @@ geopy==2.4.1
 requests==2.31.0
 matplotlib==3.8.2
 kneed==0.8.5
-numpy<1.24.0  # Use an older NumPy version compatible with scikit-learn 0.24.2
+numpy<1.24.0
 scikit-learn==0.24.2
