--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,121 @@
-setuptools>=59.6.0
-folium
-geopy==2.4.1
-requests==2.31.0
-matplotlib
-kneed==0.8.5
-scikit-learn==0.22.1
-streamlit
-numpy==1.18.1
+altair                    4.1.0
+APScheduler               3.6.3
+argon2-cffi               21.3.0
+argon2-cffi-bindings      21.2.0
+async-generator           1.10
+attrs                     19.3.0
+backcall                  0.2.0
+bleach                    4.1.0
+blinker                   1.5
+branca                    0.5.0
+cachetools                4.2.4
+certifi                   2019.11.28
+cffi                      1.15.1
+charset-normalizer        2.0.12
+Click                     7.0
+colorama                  0.4.5
+colorhash                 1.0.2
+comm                      0.1.4
+commonmark                0.9.1
+configparser              4.0.2
+cycler                    0.10.0
+dataclasses               0.8
+decorator                 5.1.1
+defusedxml                0.7.1
+entrypoints               0.4
+Flask                     1.1.1
+Flask-Cors                3.0.8
+Flask-MonitoringDashboard 3.0.6
+folium                    0.13.0
+geographiclib             1.52
+geopy                     2.2.0
+gitdb                     4.0.9
+GitPython                 3.1.18
+idna                      3.10
+imbalanced-learn          0.6.1
+imblearn                  0.0
+importlib-metadata        1.4.0
+ipykernel                 5.5.6
+ipython                   7.16.3
+ipython-genutils          0.2.0
+ipywidgets                7.8.5
+itsdangerous              1.1.0
+jedi                      0.17.2
+Jinja2                    2.11.0
+joblib                    0.14.1
+jsonschema                3.2.0
+jupyter-client            7.1.2
+jupyter-core              4.9.2
+jupyterlab-pygments       0.1.2
+jupyterlab_widgets        1.1.11
+kiwisolver                1.1.0
+kneed                     0.5.1
+lightgbm                  4.3.0
+MarkupSafe                1.1.1
+matplotlib                3.1.2
+mistune                   0.8.4
+more-itertools            8.1.0
+nbclient                  0.5.9
+nbconvert                 6.0.7
+nbformat                  5.1.3
+nest-asyncio              1.6.0
+notebook                  6.4.10
+numpy                     1.18.1
+packaging                 21.3
+pandas                    0.25.3
+pandocfilters             1.5.1
+parso                     0.7.1
+pickleshare               0.7.5
+Pillow                    8.4.0
+pip                       21.2.2
+prometheus-client         0.17.1
+prompt-toolkit            3.0.36
+protobuf                  3.19.6
+psutil                    5.6.7
+pyarrow                   6.0.1
+pycparser                 2.21
+pydeck                    0.6.2
+Pygments                  2.14.0
+Pympler                   1.1
+pyparsing                 2.4.6
+pyrsistent                0.15.7
+python-dateutil           2.8.1
+pytz                      2019.3
+pywin32                   305
+pywinpty                  1.1.6
+PyYAML                    5.3
+pyzmq                     25.1.2
+regexp                    0.1
+requests                  2.27.1
+rich                      12.6.0
+scikit-learn              0.22.1
+scipy                     1.4.1
+semver                    2.13.0
+Send2Trash                1.8.3
+setuptools                58.0.4
+six                       1.14.0
+sklearn                   0.0
+sklearn-pandas            1.8.0
+smmap                     5.0.0
+SQLAlchemy                1.3.13
+streamlit                 1.10.0
+streamlit-folium          0.4.0
+terminado                 0.12.1
+testpath                  0.6.0
+toml                      0.10.2
+toolz                     0.12.0
+tornado                   6.1
+traitlets                 4.3.3
+typing_extensions         4.1.1
+tzlocal                   2.0.0
+urllib3                   1.26.20
+validators                0.20.0
+watchdog                  2.3.1
+wcwidth                   0.2.13
+webencodings              0.5.1
+Werkzeug                  0.16.1
+wheel                     0.37.1
+widgetsnbextension        3.6.10
+wincertstore              0.2
+xgboost                   0.90
+zipp                      2.0.1
