--- a/requirements.txt
+++ b/requirements.txt
@@ -19,7 +19,7 @@ kiwisolver==1.1.0
 kneed==0.5.1 
 MarkupSafe==1.1.1
 more-itertools==8.1.0 
-numpy==1.18.1 --no-build-isolation
+numpy==1.18.1
 pandas==0.25.3 
 psutil==5.6.7 
 pyparsing==2.4.6 
